# cubrid-jira-fetcher

./: .gitignore  README.md  demo.cast  fetcher.py  justfile  pyproject.toml
cubrid_jira_fetcher/: fetcher.py
src/cubrid_jira_fetcher/: search.py
