[project]
name = "cubrid-jira-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools.packages.find]
include = ["cubrid_jira_fetcher*"]

[project.scripts]
jira-fetch = "cubrid_jira_fetcher.fetcher:main"
cubrid-jira-search = "cubrid_jira_fetcher.search:main"
